--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,14 @@ project(WinCppTemplate VERSION 1.0)
 # specify the C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+# set output executable file directory
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 include_directories("./includes/")
 
-add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
-add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
+set(MY_EXECUTABLE_NAME "cpp_primer")
 
-add_executable(WinCppTemplate "./src/chapter01/p17.cpp")
+add_executable(
+  ${MY_EXECUTABLE_NAME}
+  "src/chapter02/p41.cpp"
+)
